# cvoxel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
res/shaders/: frag.glsl  vert.glsl
src/: camera.c  camera.h  game.c  game.h  main.c  window.c  window.h
src/client/gl/: buffer.c  buffer.h  shader.c  shader.h  texture.h  vertexarray.h
src/client/window/: input.h  window.c  window.h
src/ecs/: ecs.c  ecs.h
src/ecs/components/: camera.h  componentsInit.c  componentsInit.h  name.h  transform.h
src/ecs/private/: componentsInit.c  componentsInit.h
src/gl/: buffer.c  buffer.h  shader.c  shader.h  texture.c  texture.h  vertexarray.c  vertexarray.h
src/graphics/: buffer.c  buffer.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h  vertexarray.c  vertexarray.h
src/utils/: bitset.h  macro.h  mesh.h  types.h  vec3s.h  vmath.h
src/world/: chunk.c  chunk.h
